apps/generic/overlays/drawing-game/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drawing-game
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
